plugins {
    id 'distribution'
}

allprojects {
    version '1.1.0'
}

subprojects {
    apply plugin: 'java'

    sourceCompatibility = 1.8

    repositories {
        maven{
            url 'https://dl.bintray.com/3dcitydb/maven'
        }
        maven {
            url 'http://download.osgeo.org/webdav/geotools'
        }
        jcenter()
    }
}

distributions.main.contents {
    into('lib') {
        from tasks.getByPath(':test-ade-citygml4j:jar')
        from tasks.getByPath(':test-ade-citydb:jar')
    }
    into('schema-mapping') {
        from "${project('test-ade-citydb').projectDir}/resources/schema-mapping"
    }
    into('3dcitydb') {
        from "${project('test-ade-citydb').projectDir}/resources/3dcitydb"
    }
}